[gd_scene load_steps=2 format=3 uid="uid://bt8w7lxkx8dcs"]

[ext_resource type="Script" path="res://Tests/mod_selling_test.gd" id="1_2w9fm"]

[node name="ModSellingTest" type="Node2D"]
script = ExtResource("1_2w9fm")

[node name="DiceHand" type="Node2D" parent="."]

[node name="GameController" type="Node" parent="."]

[node name="ModManager" type="Node" parent="."]